--- a/todoList/index.html
+++ b/todoList/index.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8">
 		<title>ToDo List</title>
 		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+		<link rel="icon" href="icon/favicon.ico">
 		<script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
 	</head>
 	<body>
@@ -48,7 +50,7 @@
 
 			</table>
 
-			<h2>新しい作業の追加</h2>
+			<h2><i class="fas fa-plus-circle add-icon"></i>新しい作業の追加</h2>
 			<form class="add-form" @submit.prevent="doAdd">
 				ToDo<input type="text" ref="comment">
 				<button type="submit">追加</button>
