--- a/todoList/index.html
+++ b/todoList/index.html
@@ -52,7 +52,7 @@
 
 			<h2><i class="fas fa-plus-circle add-icon"></i>新しい作業の追加</h2>
 			<form class="add-form" @submit.prevent="doAdd">
-				ToDo<input type="text" ref="comment">
+				ToDo<input type="text" ref="comment" autofocus>
 				<button type="submit">追加</button>
 			</form>
 		</div>
